Fixes for Java 11